--- a/Messner_Pfandler_sentiment_analysis.ipynb
+++ b/Messner_Pfandler_sentiment_analysis.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 438,
-   "id": "e27679da-b5dc-4a33-91ac-24fa89058f23",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Motivation and State of the Art\n",
+    "___"
+   ],
+   "id": "49ed570a02eb2e38"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Installing libraries\n",
+    "___"
+   ],
+   "id": "95921a82e61ecf6e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
@@ -123,6 +139,7 @@
      ]
     }
    ],
+   "execution_count": 438,
    "source": [
     "!pip install gensim --upgrade\n",
     "!pip install tensorflow\n",
@@ -133,7 +150,8 @@
     "!pip install seaborn\n",
     "!pip install mlxtend\n",
     "!pip install textblob"
-   ]
+   ],
+   "id": "e27679da-b5dc-4a33-91ac-24fa89058f23"
   },
   {
    "cell_type": "code",
@@ -192,15 +210,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 536,
-   "id": "f8ca1fce-dd30-48b6-9d6e-85e9bcd22615",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Get the data\n",
+    "___"
+   ],
+   "id": "ef0129ea4a06e0bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": 536,
    "source": [
     "data = pd.read_csv(\"training.1600000.processed.noemoticon.csv\", encoding = \"ISO-8859-1\", engine=\"python\")\n",
     "data.columns = [\"label\", \"id\", \"date\", \"query\", \"username\", \"text\"]"
-   ]
+   ],
+   "id": "f8ca1fce-dd30-48b6-9d6e-85e9bcd22615"
   },
   {
    "cell_type": "code",
@@ -313,14 +340,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 538,
-   "id": "ad0a007c-0550-45f4-a58b-e36c0a1c6067",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Only the 'text' and 'label' columns are necessary.",
+   "id": "d697c86513c5b60a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": [
-    "data=data[['text','label']]"
-   ]
+   "execution_count": 538,
+   "source": "data=data[['text','label']]",
+   "id": "ad0a007c-0550-45f4-a58b-e36c0a1c6067"
   },
   {
    "cell_type": "code",
@@ -519,6 +550,12 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Label '4' gets changed to label '1'.",
+   "id": "8b184b90fda23e69"
+  },
+  {
    "cell_type": "code",
    "execution_count": 545,
    "id": "f43d7a6e-908c-488d-abdf-6964133a9c07",
@@ -601,9 +638,7 @@
    "cell_type": "markdown",
    "id": "8f307dcb-84e9-4c7e-ba6c-62dbebbe4522",
    "metadata": {},
-   "source": [
-    "DATASET REDUCTION for TESTING"
-   ]
+   "source": "## Dataset reduction for testing"
   },
   {
    "cell_type": "code",
@@ -646,7 +681,8 @@
    "id": "5f1f9d09-f8d7-41ad-89df-17fc7b909d2d",
    "metadata": {},
    "source": [
-    "TEXT CLEANING"
+    "# Text cleaning\n",
+    "___"
    ]
   },
   {
@@ -687,9 +723,7 @@
    "cell_type": "markdown",
    "id": "d1368a94-c77b-4f5a-b663-9ea3c2206769",
    "metadata": {},
-   "source": [
-    "Abkürzungen ausschreiben"
-   ]
+   "source": "Abbreviations are changed to whole words."
   },
   {
    "cell_type": "code",
@@ -1270,7 +1304,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_7\"\u001b[0m\n"
+       "\u001B[1mModel: \"sequential_7\"\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -1309,30 +1343,30 @@
       ],
       "text/plain": [
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┃\u001B[1m \u001B[0m\u001B[1mLayer (type)                   \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1mOutput Shape          \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1m      Param #\u001B[0m\u001B[1m \u001B[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_7 (\u001b[38;5;33mEmbedding\u001b[0m)         │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ embedding_7 (\u001B[38;5;33mEmbedding\u001B[0m)         │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_21 (\u001b[38;5;33mLSTM\u001b[0m)                  │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ lstm_21 (\u001B[38;5;33mLSTM\u001B[0m)                  │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_27 (\u001b[38;5;33mDropout\u001b[0m)            │ ?                      │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_27 (\u001B[38;5;33mDropout\u001B[0m)            │ ?                      │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_22 (\u001b[38;5;33mLSTM\u001b[0m)                  │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ lstm_22 (\u001B[38;5;33mLSTM\u001B[0m)                  │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_28 (\u001b[38;5;33mDropout\u001b[0m)            │ ?                      │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_28 (\u001B[38;5;33mDropout\u001B[0m)            │ ?                      │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_23 (\u001b[38;5;33mLSTM\u001b[0m)                  │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ lstm_23 (\u001B[38;5;33mLSTM\u001B[0m)                  │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_29 (\u001b[38;5;33mDropout\u001b[0m)            │ ?                      │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_29 (\u001B[38;5;33mDropout\u001B[0m)            │ ?                      │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_13 (\u001b[38;5;33mDense\u001b[0m)                │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ dense_13 (\u001B[38;5;33mDense\u001B[0m)                │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ batch_normalization_6           │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
-       "│ (\u001b[38;5;33mBatchNormalization\u001b[0m)            │                        │               │\n",
+       "│ batch_normalization_6           │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
+       "│ (\u001B[38;5;33mBatchNormalization\u001B[0m)            │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_30 (\u001b[38;5;33mDropout\u001b[0m)            │ ?                      │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_30 (\u001B[38;5;33mDropout\u001B[0m)            │ ?                      │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_14 (\u001b[38;5;33mDense\u001b[0m)                │ ?                      │   \u001b[38;5;34m0\u001b[0m (unbuilt) │\n",
+       "│ dense_14 (\u001B[38;5;33mDense\u001B[0m)                │ ?                      │   \u001B[38;5;34m0\u001B[0m (unbuilt) │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1346,7 +1380,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+       "\u001B[1m Total params: \u001B[0m\u001B[38;5;34m0\u001B[0m (0.00 B)\n"
       ]
      },
      "metadata": {},
@@ -1359,7 +1393,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+       "\u001B[1m Trainable params: \u001B[0m\u001B[38;5;34m0\u001B[0m (0.00 B)\n"
       ]
      },
      "metadata": {},
@@ -1372,7 +1406,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+       "\u001B[1m Non-trainable params: \u001B[0m\u001B[38;5;34m0\u001B[0m (0.00 B)\n"
       ]
      },
      "metadata": {},
@@ -1460,25 +1494,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1668s\u001b[0m 2s/step - accuracy: 0.6342 - loss: 0.6160 - val_accuracy: 0.7380 - val_loss: 0.5231\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1668s\u001B[0m 2s/step - accuracy: 0.6342 - loss: 0.6160 - val_accuracy: 0.7380 - val_loss: 0.5231\n",
       "Epoch 2/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1667s\u001b[0m 2s/step - accuracy: 0.7530 - loss: 0.5107 - val_accuracy: 0.7533 - val_loss: 0.4969\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1667s\u001B[0m 2s/step - accuracy: 0.7530 - loss: 0.5107 - val_accuracy: 0.7533 - val_loss: 0.4969\n",
       "Epoch 3/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1710s\u001b[0m 2s/step - accuracy: 0.7590 - loss: 0.4983 - val_accuracy: 0.7587 - val_loss: 0.5003\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1710s\u001B[0m 2s/step - accuracy: 0.7590 - loss: 0.4983 - val_accuracy: 0.7587 - val_loss: 0.5003\n",
       "Epoch 4/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1730s\u001b[0m 3s/step - accuracy: 0.7678 - loss: 0.4841 - val_accuracy: 0.7571 - val_loss: 0.4937\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1730s\u001B[0m 3s/step - accuracy: 0.7678 - loss: 0.4841 - val_accuracy: 0.7571 - val_loss: 0.4937\n",
       "Epoch 5/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1729s\u001b[0m 3s/step - accuracy: 0.7752 - loss: 0.4720 - val_accuracy: 0.7608 - val_loss: 0.4912\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1729s\u001B[0m 3s/step - accuracy: 0.7752 - loss: 0.4720 - val_accuracy: 0.7608 - val_loss: 0.4912\n",
       "Epoch 6/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1733s\u001b[0m 3s/step - accuracy: 0.7797 - loss: 0.4653 - val_accuracy: 0.7566 - val_loss: 0.4948\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1733s\u001B[0m 3s/step - accuracy: 0.7797 - loss: 0.4653 - val_accuracy: 0.7566 - val_loss: 0.4948\n",
       "Epoch 7/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1732s\u001b[0m 3s/step - accuracy: 0.7803 - loss: 0.4621 - val_accuracy: 0.7561 - val_loss: 0.4992\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1732s\u001B[0m 3s/step - accuracy: 0.7803 - loss: 0.4621 - val_accuracy: 0.7561 - val_loss: 0.4992\n",
       "Epoch 8/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1738s\u001b[0m 3s/step - accuracy: 0.7855 - loss: 0.4539 - val_accuracy: 0.7554 - val_loss: 0.4990\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1738s\u001B[0m 3s/step - accuracy: 0.7855 - loss: 0.4539 - val_accuracy: 0.7554 - val_loss: 0.4990\n",
       "Epoch 9/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1742s\u001b[0m 3s/step - accuracy: 0.7868 - loss: 0.4493 - val_accuracy: 0.7536 - val_loss: 0.5098\n",
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1742s\u001B[0m 3s/step - accuracy: 0.7868 - loss: 0.4493 - val_accuracy: 0.7536 - val_loss: 0.5098\n",
       "Epoch 10/10\n",
-      "\u001b[1m690/690\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1732s\u001b[0m 3s/step - accuracy: 0.7883 - loss: 0.4454 - val_accuracy: 0.7549 - val_loss: 0.5067\n"
+      "\u001B[1m690/690\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1732s\u001B[0m 3s/step - accuracy: 0.7883 - loss: 0.4454 - val_accuracy: 0.7549 - val_loss: 0.5067\n"
      ]
     }
    ],
@@ -1554,7 +1588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1313/1313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m155s\u001b[0m 118ms/step - accuracy: 0.7517 - loss: 0.5084\n"
+      "\u001B[1m1313/1313\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m155s\u001B[0m 118ms/step - accuracy: 0.7517 - loss: 0.5084\n"
      ]
     }
    ],
@@ -1600,7 +1634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1313/1313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 121ms/step\n"
+      "\u001B[1m1313/1313\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m159s\u001B[0m 121ms/step\n"
      ]
     }
    ],
